# qclaimstaker

./: .gitignore  README.md  SPEC.md  pyproject.toml
qclaimstaker/: cli.py  config.py  db.py
qclaimstaker/pipeline/: candidates.py  constraints.py  emitter.py  inverse.py  load_properties.py  ranking.py  schema.py  tiering.py  type_resolution.py
qclaimstaker/review/: app.py
qclaimstaker/review/templates/: base.html  pair.html  queue.html
sql/: 001_expected_source_tables.sql  002_derived_tables.sql  003_seed_inverses.sql  004_seed_blocklists.sql  005_recommended_source_indexes.sql  009_edge_cache.sql  010_subclass_closure.sql  011_transitive_paths.sql  012_candidate_refresh.sql
