[project]
name = "qclaimstaker"
version = "0.2.0"
description = "Ranked, typed, directed Wikidata statement candidates from Wikipedia link-graph evidence"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary,pool]>=3.2",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
qclaimstaker = "qclaimstaker.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qclaimstaker*"]

[tool.setuptools.package-data]
qclaimstaker = ["review/templates/*.html"]
